# Irreversibilitygating

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
analysis/: cache_exp.parquet  cache_main.parquet
config/: settings.json
data/: eval_set.json
irrgate/: __init__.py  _gemini.py  actions.py  classifier.py  config.py  gate.py  profile.py  routing.py  rubric.py  taxonomy.py  utils.py
irrgate/data/: __init__.py  loader.py  sampler.py
irrgate/evaluation/: __init__.py  analysis.py  metrics.py  runner.py
notebooks/: cache_sanity_check.ipynb  cache_sanity_check_executed.ipynb  rubric_cache_sanity_check.ipynb  tau_surface.ipynb
results/20260427_axfix/: aggregate_results.json  per_trajectory_results.csv  progress.jsonl
results/20260427_taud010/: aggregate_results.json  per_trajectory_results.csv  progress.jsonl
results/baseline_gemini/: progress.jsonl
results/cv/: cv_results.json
results/diagnostics/: alpha_sensitivity.json  false_negatives.json  fp_sample.json  per_benchmark_model.json  stage_contribution.json  threshold_sensitivity.json
results/diagnostics_cv_tau/: alpha_sensitivity.json  false_negatives.json  fp_sample.json  per_benchmark_model.json
scripts/: analyze_thresholds.py  build_classification_cache.py  build_eval_set.py  build_rubric_cache.py  compute_profiles.py  download_data.py  patch_cache_add_profiles.py  run_cv.py  run_diagnostics.py  run_evaluation.py
tests/: test_actions.py  test_classifier.py  test_evaluation.py  test_gate.py  test_loader.py  test_profile.py  test_profile_real.py  test_routing.py  test_rubric.py  test_sampler.py
(+12 files in other folders)
